# orb-engine

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
engine/: CMakeLists.txt
engine/data/entities/: free_camera.json
engine/data/level/: empty.json  prototype.json
engine/src/core/: CMakeLists.txt
engine/src/core/private/: dataCenter.cpp  orbAssert.cpp  orbCommon.cpp  orbMath.cpp  serializable.cpp  serializationHelpers.cpp
engine/src/core/public/: macroHelpers.h  orbAssert.h  orbCommon.h  orbFormatters.h  orbFormatters.hpp  orbForwards.h  orbMath.h  serializable.h  serializationHelpers.h  type.h  typeRegistrar.h
engine/src/engine/: CMakeLists.txt
engine/src/engine/private/: dataCenter.cpp  engine.cpp  engineInitData.cpp  engineRenderingInitStage.cpp  engineRenderingInitStage.h  engineRuntimeStage.cpp  engineStage.cpp  engineWindowInitStage.cpp  engineWindowInitStage.h  level.cpp  mathSerialization.cpp  mesh.cpp  renderer.cpp  renderer.h  resRef.cpp  serializable.cpp
engine/src/engine/private/base/: cameraSystem.cpp  controller.cpp  gameInstance.cpp  gameMode.cpp  gameSystem.cpp  player.cpp  tickPerformer.cpp
engine/src/engine/private/components/: cameraComponent.cpp  inputComponent.cpp  meshComponent.cpp  physicsComponent.cpp
engine/src/engine/private/ecs/: component.cpp  entity.cpp  entityRef.cpp  entitySystem.cpp  entitySystem.h  positionComponent.cpp
engine/src/engine/private/gameBase/: cameraSystem.h  controller.cpp  controllerSystem.cpp  controllerSystem.h  gameMode.cpp  gameRuntimeStage.cpp  physicsSystem.cpp  physicsSystem.h  player.cpp  tickPerformer.h
engine/src/engine/private/ui/: uiSystem.cpp  uiSystem.h
engine/src/engine/private/ui/elements/: uiButton.cpp  uiElement.cpp  uiRootView.cpp  uiText.cpp
engine/src/engine/public/: callbackRegistry.h  dataCenter.h  engine.h  engineInitData.h  engineRuntimeStage.h  engineStage.h  engineTypes.h  inputHelpers.h  level.h  mathSerialization.h  mesh.h  orbForwards.h  rendererInterface.h  rendererTypes.h  resRef.h  type.h
engine/src/engine/public/base/: controller.h  gameInstance.h  gameMode.h
engine/src/engine/public/components/: cameraComponent.h  inputComponent.h  meshComponent.h  physicsComponent.h
engine/src/engine/public/ecs/: component.h  entity.h  entityRef.h  entitySystemInterface.h  positionComponent.h
engine/src/engine/public/gameBase/: cameraSystemInterface.h  controllerSystemInterface.h  gameRuntimeStage.h  gameSystem.h  physicsSystemInterface.h  player.h  tickRegister.h
engine/src/engine/public/ui/: uiSystemInterface.h
engine/src/engine/public/ui/elements/: uiButton.h  uiElement.h  uiRootView.h  uiText.h
engine/src/math/: CMakeLists.txt
engine/src/math/private/: orbMath.cpp
engine/src/math/public/: eulerAngles.h  eulerAngles.hpp  mathTypes.h  mathUtils.h  mathUtils.hpp  orbMath.h  quaternion.h  transform.h
engine/src/prototype/: CMakeLists.txt
engine/src/prototype/private/: main.cpp  protoRuntimeStage.cpp  protoRuntimeStage.h
ext/: CMakeLists.txt
ext/DirectXTK/: CMakeLists.txt
ext/DirectXTK/cmake/: DirectXTK-targets-debug.cmake  DirectXTK-targets-release.cmake  DirectXTK-targets-relwithdebinfo.cmake  DirectXTK-targets.cmake  directxtk-config-version.cmake  directxtk-config.cmake
